# hermes-agent

./: .env.example  changes.md  myaaa  pyproject.toml  run_agent.py  toolsets.py  wangjinliang_a2a_contribution_summary.md  websocket_client.py  wjl.txt
a2a-python-1.0.2/: .git-blame-ignore-revs  .gitignore  .jscpd.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  GEMINI.md  README.md  buf.compat.gen.yaml  buf.gen.yaml  demo_websocket_client.py  pyproject.toml  test_websocket_integration.py  test_websocket_transport_e2e.py  websocket.md
a2a-python-1.0.2/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
a2a-python-1.0.2/.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
a2a-python-1.0.2/.github/workflows/: conventional-commits.yml  coverage-comment.yaml  install-smoke.yml  itk.yaml  linter.yaml  python-publish.yml  release-please.yml  run-tck.yaml  security.yaml  spelling.yaml  stale.yaml  (+1 more)
a2a-python-1.0.2/itk/: README.md  main.py  pyproject.toml  run_itk.sh
a2a-python-1.0.2/samples/: README.md  cli.py  hello_world_agent.py
a2a-python-1.0.2/scripts/: docker-compose.test.yml  format.sh  gen_proto.sh  gen_proto_compat.sh  lint.sh  run_db_tests.sh  test_install_smoke.py  test_install_smoke.sh
a2a-python-1.0.2/tck/: sut_agent.py  sut_agent_with_vertex_task_store.py
a2a-python-1.0.2/tests/: README.md  test_types.py
gateway/: run.py
hermes_cli/: config.py  tools_config.py
scripts/: release.py
tests/: test_tui_gateway_server.py
tests/tools/: test_registry.py
tools/: a2a_proxy.py
tui_gateway/: server.py
(+211 files in other folders)
